GTN_Crd_Domo_CSharp/GTN_Crd_Domo_CSharp/config.cs

using System.Runtime.InteropServices;

namespace gts
{
    public class mc_cfg
	{
		
			public const short RES_LIMIT = 8;
			public const short RES_ALARM = 8;
			public const short RES_HOME = 8;
			public const short RES_GPI = 16;
			public const short RES_ARRIVE = 8;
			public const short RES_MPG = 7;
			
			public const short RES_ENABLE = 8;
			public const short RES_CLEAR = 8;
			public const short RES_GPO = 16;
			
			public const short RES_DAC = 12;
			public const short RES_STEP = 8;
			public const short RES_PULSE = 8;
			public const short RES_ENCODER = 11;
			public const short RES_LASER = 2;  
			
			public const short AXIS_MAX = 8;
			public const short PROFILE_MAX = 8;
			public const short CONTROL_MAX = 8;
			
			public const short PRF_MAP_MAX = 2;
			public const short ENC_MAP_MAX = 2;
			
			public const short STEP_DIR = 0;
			public const short STEP_PULSE = 1;
			
			public const short CRD_BUF_DATA_NULL = 0;
			
			public struct TDiConfig
			{
                public short active;
                public short reverse;
                public short filterTime;
			}

			public struct TCountConfig
			{
                public short active;
                public short reverse;
                public short filterType;

                public short captureSource;
                public short captureHomeSense;
                public short captureIndexSense;
			}

			public struct TDoConfig
			{
                public short active;
                public short axis;
                public short axisItem;
                public short reverse;
			}

			public struct TStepConfig
			{
                public short active;
                public short axis;
                public short mode;
                public short parameter;
                public short reverse;
			}

			public struct TDacConfig
			{
                public short active;
                public short control;
                public short reverse;
                public short bias;
                public short limit;
			}

			public struct TControlConfig
			{
                public short active;
                public short axis;
                public short encoder1;
                public short encoder2;
                public long errorLimit;
                public short filterType1;
                public short filterType2;
                public short filterType3;
                public short encoderSmooth;
                public short controlSmooth;
			}

			public struct TProfileConfig
			{
                public short active;
                public double decSmoothStop;
                public double decAbruptStop;
			}

			public struct TAxisConfig
			{
                public short active;
                public short alarmType;
                public short alarmIndex;
                public short limitPositiveType;
                public short limitPositiveIndex;
                public short limitNegativeType;
                public short limitNegativeIndex;
                public short smoothStopType;
                public short smoothStopIndex;
                public short abruptStopType;
                public short abruptStopIndex;
                public long prfMap;
                public long encMap;
                public short prfMapAlpha1;
                public short prfMapAlpha2;
                public short prfMapBeta1;
                public short prfMapBeta2;
                public short encMapAlpha1;
                public short encMapAlpha2;
                public short encMapBeta1;
                public short encMapBeta2;
			}

			public struct TMcConfig
			{
                public TProfileConfig profile1;
                public TProfileConfig profile2;
                public TProfileConfig profile3;
                public TProfileConfig profile4;
                public TProfileConfig profile5;
                public TProfileConfig profile6;
                public TProfileConfig profile7;
                public TProfileConfig profile8;
                public TAxisConfig axis1;
                public TAxisConfig axis2;
                public TAxisConfig axis3;
                public TAxisConfig axis4;
                public TAxisConfig axis5;
                public TAxisConfig axis6;
                public TAxisConfig axis7;
                public TAxisConfig axis8;
                public TControlConfig control1;
                public TControlConfig control2;
                public TControlConfig control3;
                public TControlConfig control4;
                public TControlConfig control5;
                public TControlConfig control6;
                public TControlConfig control7;
                public TControlConfig control8;
                public TDacConfig dac1;
                public TDacConfig dac2;
                public TDacConfig dac3;
                public TDacConfig dac4;
                public TDacConfig dac5;
                public TDacConfig dac6;
                public TDacConfig dac7;
                public TDacConfig dac8;
                public TDacConfig dac9;
                public TDacConfig dac10;
                public TDacConfig dac11;
                public TDacConfig dac12;
                public TStepConfig step1;
                public TStepConfig step2;
                public TStepConfig step3;
                public TStepConfig step4;
                public TStepConfig step5;
                public TStepConfig step6;
                public TStepConfig step7;
                public TStepConfig step8;
                public TCountConfig encoder1;
                public TCountConfig encoder2;
                public TCountConfig encoder3;
                public TCountConfig encoder4;
                public TCountConfig encoder5;
                public TCountConfig encoder6;
                public TCountConfig encoder7;
                public TCountConfig encoder8;
                public TCountConfig encoder9;
                public TCountConfig encoder10;
                public TCountConfig encoder11;
                public TCountConfig pulse1;
                public TCountConfig pulse2;
                public TCountConfig pulse3;
                public TCountConfig pulse4;
                public TCountConfig pulse5;
                public TCountConfig pulse6;
                public TCountConfig pulse7;
                public TCountConfig pulse8;
                public TDoConfig enable1;
                public TDoConfig enable2;
                public TDoConfig enable3;
                public TDoConfig enable4;
                public TDoConfig enable5;
                public TDoConfig enable6;
                public TDoConfig enable7;
                public TDoConfig enable8;
                public TDoConfig clear1;
                public TDoConfig clear2;
                public TDoConfig clear3;
                public TDoConfig clear4;
                public TDoConfig clear5;
                public TDoConfig clear6;
                public TDoConfig clear7;
                public TDoConfig clear8;
                public TDoConfig gpo1;
                public TDoConfig gpo2;
                public TDoConfig gpo3;
                public TDoConfig gpo4;
                public TDoConfig gpo5;
                public TDoConfig gpo6;
                public TDoConfig gpo7;
                public TDoConfig gpo8;
                public TDoConfig gpo9;
                public TDoConfig gpo10;
                public TDoConfig gpo11;
                public TDoConfig gpo12;
                public TDoConfig gpo13;
                public TDoConfig gpo14;
                public TDoConfig gpo15;
                public TDoConfig gpo16;
                public TDiConfig limitPositive1;
                public TDiConfig limitPositive2;
                public TDiConfig limitPositive3;
                public TDiConfig limitPositive4;
                public TDiConfig limitPositive5;
                public TDiConfig limitPositive6;
                public TDiConfig limitPositive7;
                public TDiConfig limitPositive8;
                public TDiConfig limitNegative1;
                public TDiConfig limitNegative2;
                public TDiConfig limitNegative3;
                public TDiConfig limitNegative4;
                public TDiConfig limitNegative5;
                public TDiConfig limitNegative6;
                public TDiConfig limitNegative7;
                public TDiConfig limitNegative8;
                public TDiConfig alarm1;
                public TDiConfig alarm2;
                public TDiConfig alarm3;
                public TDiConfig alarm4;
                public TDiConfig alarm5;
                public TDiConfig alarm6;
                public TDiConfig alarm7;
                public TDiConfig alarm8;
                public TDiConfig home1;
                public TDiConfig home2;
                public TDiConfig home3;
                public TDiConfig home4;
                public TDiConfig home5;
                public TDiConfig home6;
                public TDiConfig home7;
                public TDiConfig home8;
                public TDiConfig gpi1;
                public TDiConfig gpi2;
                public TDiConfig gpi3;
                public TDiConfig gpi4;
                public TDiConfig gpi5;
                public TDiConfig gpi6;
                public TDiConfig gpi7;
                public TDiConfig gpi8;
                public TDiConfig arrive1;
                public TDiConfig arrive2;
                public TDiConfig arrive3;
                public TDiConfig arrive4;
                public TDiConfig arrive5;
                public TDiConfig arrive6;
                public TDiConfig arrive7;
                public TDiConfig arrive8;
                public TDiConfig mpg1;
                public TDiConfig mpg2;
                public TDiConfig mpg3;
                public TDiConfig mpg4;
                public TDiConfig mpg5;
                public TDiConfig mpg6;
                public TDiConfig mpg7;
			}
